# nlqe

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  EXAMPLE_QUERIES.md  FILE_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  create_sample_data.py  docker-compose.yml  main.py  prototype.ipynb  prototype_advanced.ipynb  pyproject.toml
.github/workflows/: ci.yml  publish.yml
conductor/tracks/external-databases/: plan.md  spec.md
conductor/tracks/remote-filesystems/: plan.md  spec.md
docs/: API.md  ARCHITECTURE.md  DESIGN.md  FAQ.md  ROADMAP.md  TESTING.md
fixtures/: README.md  customers.parquet  example_queries.yaml  golden_datasets.yaml  products.parquet  regions.parquet  transactions.parquet
scripts/: bump_version.py
src/nlqe/: __init__.py  config.py  engine.py  types.py
src/nlqe/conversation/: __init__.py  manager.py
src/nlqe/datasource/: __init__.py  introspector.py  manager.py
src/nlqe/duckdb/: __init__.py  executor.py
src/nlqe/llm/: __init__.py  client.py
src/nlqe/openai/: __init__.py  client.py
src/nlqe/query/: __init__.py  loop.py
src/nlqe/synthesis/: __init__.py  answer.py
src/nlqe/testing/: __init__.py  cli.py  datasets.py  evaluator.py  metrics.py  reporter.py
src/nlqe/utils/: __init__.py  errors.py  logging.py
src/query_engine/: __init__.py  config.py  engine.py  types.py
tests/: conftest.py
tests/db_init/: azure_init.py  mysql_init.sql  postgres_init.sql
tests/integration/: test_external_dbs.py  test_pipeline.py  test_remote_files.py
tests/unit/llm/: test_client.py
(+35 files in other folders)
